--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 .header {
 	margin: 0;
-	background-image: url(../public/images/background.jpg);
+	background-image: url(../public/images/background3.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -15,5 +15,15 @@ h2 {
 	height: 200px;
 	background-repeat: no-repeat;
 	background-position: center center;
+}
+
+.background {
+background:
+radial-gradient(black 15%, transparent 16%) 0 0,
+radial-gradient(black 15%, transparent 16%) 8px 8px,
+radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+background-color:#282828;
+background-size: 16px 16px;
 }
   
